--- a/index.html
+++ b/index.html
@@ -384,6 +384,19 @@
                     </li>
                 </ul>
             </div>
+                    <div class="form-container">
+                        <p class="form-title">Subscribe</p>
+                        <form class="form" name="subscribe" autocomplete="off">
+                        <label class="form-label">
+                            <input class="form-input" name="email_address" placeholder="Email" />
+                            <button class="form-btn" type="submit">Subscribe
+                                <svg class="form-btn-icon" width="24" height="24">
+                                    <use href="./images/icons.svg#icon-subscribe"></use>
+                                </svg>
+                            </button>
+                        </label>
+                    </form>
+                    </div>
         </div>
     </footer>
 </body>
