--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         </nav>
         <address class="adres">
             <ul class="adres-list">
-              <li>
-                <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
-              </li>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="contacts">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111" class="contacts">+11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
         </div>
@@ -388,7 +388,7 @@
                         <p class="form-title">Subscribe</p>
                         <form class="form" name="subscribe" autocomplete="off">
                         <label class="form-label">
-                            <input class="form-input" name="email_address" placeholder="Email" />
+                            <input class="form-input" name="email" placeholder="Email" />
                             <button class="form-btn" type="submit">Subscribe
                                 <svg class="form-btn-icon" width="24" height="24">
                                     <use href="./images/icons.svg#icon-subscribe"></use>
@@ -399,5 +399,28 @@
                     </div>
         </div>
     </footer>
+
+    <div class="modal-overlay">
+        <div class="modal">
+            <svg class="modal-icon-close" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+            <p class="modal-text">Leave your contacts and we will call you back</p>
+            <form>
+                <label>
+                    Name
+                    <input type="text" name="username" placeholder="" />
+                </label>
+                <label>
+                    Phone
+                    <input type="tel" name="contact_tel" placeholder="" />
+                </label>
+                <label>
+                    Email
+                    <input type="email" name="email" placeholder="" />
+                </label>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
