--- a/index.html
+++ b/index.html
@@ -408,6 +408,34 @@
                 </svg>
             </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
+            <form class="modal-form">
+                <div class="modal-field">
+                    <label for="user-name" class="modal-label">Name</label>
+                        <div class="modal-input-wrap">
+                        <input type="text" name="user-name" class="modal-input" required id="user-name" />
+                        <svg class="modal-input-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                        </div>
+                    <label for="user-tel" class="modal-label">Phone</label>
+                        <div class="modal-input-wrap">
+                            <input type="tel" name="user-tel" class="modal-input" required id="user-tel" />
+                            <svg class="modal-input-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-phone"></use>
+                            </svg>
+                        </div>
+                    <label for="user-email" class="modal-label">Email</label>
+                        <div class="modal-input-wrap">
+                            <input type="email" name="user-email" class="modal-input" required id="user-email" />
+                            <svg class="modal-input-icon" width="18" height="18">
+                                <use href="./images/icons.svg#icon-email"></use>
+                            </svg>
+                        </div>
+                    <label for="user-comment" class="modal-label">Comment</label>
+                        <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-text"></textarea>
+                </div>
+            </form>
+            <button type="submit">Send</button>
         </div>
     </div>
 </body>
