--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-text"></textarea>
                 </div>
             </form>
-            <button type="submit">Send</button>
+            <button type="submit" class="btn-send">Send</button>
         </div>
     </div>
 </body>
