--- a/index.html
+++ b/index.html
@@ -402,11 +402,10 @@
 
     <div class="backdrop">
         <div class="modal">
-            <button class="btn-close" type="button">
-                <svg class="btn-close-icon" width="8" height="8">
-                    <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-            </button>
+            <button class="btn-close" type="button"></button>
+            <svg class="btn-close-icon" width="8" height="8">
+                <use href="./images/icons.svg#icon-close"></use>
+            </svg>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="modal-field">
@@ -433,6 +432,18 @@
                         </div>
                     <label for="user-comment" class="modal-label">Comment</label>
                         <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-text"></textarea>
+                </div>
+                <div class="modal-field">
+                    <input type="checkbox" name="privacy" required id="privacy" class="modal-check visually-hidden" />
+                        <label for="privacy" class="check-text">
+                            <span>
+                                <svg class="modal-check-icon" width="10" height="8">
+                                    <use href="./images/icons.svg#icon-Vector"></use>
+                                </svg>
+                            </span>
+                                I accept the terms and conditions of the
+                                    <a href="" class="check-link">Privacy Policy</a>
+                        </label>
                 </div>
             </form>
             <button type="submit" class="btn-send">Send</button>
