--- a/index.html
+++ b/index.html
@@ -402,10 +402,11 @@
 
     <div class="backdrop">
         <div class="modal">
-            <button class="btn-close" type="button"></button>
-            <svg class="btn-close-icon" width="8" height="8">
-                <use href="./images/icons.svg#icon-close"></use>
-            </svg>
+            <button class="btn-close" type="button">
+                <svg class="btn-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
             <p class="modal-title">Leave your contacts and we will call you back</p>
             <form class="modal-form">
                 <div class="modal-field">
