--- a/index.html
+++ b/index.html
@@ -389,18 +389,18 @@
                         <form class="form" name="subscribe" autocomplete="off">
                         <label class="form-label">
                             <input class="form-input" name="email" placeholder="Email" />
-                            <button class="form-btn" type="submit">Subscribe
-                                <svg class="form-btn-icon" width="24" height="24">
-                                    <use href="./images/icons.svg#icon-subscribe"></use>
-                                </svg>
-                            </button>
                         </label>
+                        <button class="form-btn" type="submit">Subscribe
+                            <svg class="form-btn-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-subscribe"></use>
+                            </svg>
+                        </button>
                     </form>
                     </div>
         </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button class="btn-close" type="button">
                 <svg class="btn-close-icon" width="8" height="8">
@@ -445,9 +445,9 @@
                                 I accept the terms and conditions of the
                                     <a href="" class="check-link">Privacy Policy</a>
                         </label>
+                        <button type="submit" class="btn-send">Send</button>
                 </div>
             </form>
-            <button type="submit" class="btn-send">Send</button>
         </div>
     </div>
 </body>
