--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <p class="form-title">Subscribe</p>
                         <form class="form" name="subscribe" autocomplete="off">
                         <label class="form-label">
-                            <input class="form-input" name="email" placeholder="Email" />
+                            <input class="form-input" type="email" name="email" placeholder="E-mail" />
                         </label>
                         <button class="form-btn" type="submit">Subscribe
                             <svg class="form-btn-icon" width="24" height="24">
@@ -417,6 +417,8 @@
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                         </div>
+                </div>
+                <div class="modal-field">
                     <label for="user-tel" class="modal-label">Phone</label>
                         <div class="modal-input-wrap">
                             <input type="tel" name="user-tel" class="modal-input" required id="user-tel" />
@@ -424,6 +426,8 @@
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
                         </div>
+                </div>
+                <div class="modal-field">
                     <label for="user-email" class="modal-label">Email</label>
                         <div class="modal-input-wrap">
                             <input type="email" name="user-email" class="modal-input" required id="user-email" />
@@ -431,6 +435,8 @@
                                 <use href="./images/icons.svg#icon-email"></use>
                             </svg>
                         </div>
+                </div>
+                <div class="modal-field">
                     <label for="user-comment" class="modal-label">Comment</label>
                         <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-text"></textarea>
                 </div>
