--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     <label for="user-name" class="modal-label">Name</label>
                         <div class="modal-input-wrap">
                         <input type="text" name="user-name" class="modal-input" required id="user-name" />
-                        <svg class="modal-input-icon" width="18" height="18">
+                        <svg class="modal-input-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                         </div>
@@ -422,7 +422,7 @@
                     <label for="user-tel" class="modal-label">Phone</label>
                         <div class="modal-input-wrap">
                             <input type="tel" name="user-tel" class="modal-input" required id="user-tel" />
-                            <svg class="modal-input-icon" width="18" height="18">
+                            <svg class="modal-input-icon" width="18" height="24">
                                 <use href="./images/icons.svg#icon-phone"></use>
                             </svg>
                         </div>
@@ -431,7 +431,7 @@
                     <label for="user-email" class="modal-label">Email</label>
                         <div class="modal-input-wrap">
                             <input type="email" name="user-email" class="modal-input" required id="user-email" />
-                            <svg class="modal-input-icon" width="18" height="18">
+                            <svg class="modal-input-icon" width="18" height="24">
                                 <use href="./images/icons.svg#icon-email"></use>
                             </svg>
                         </div>
@@ -441,9 +441,9 @@
                         <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-text"></textarea>
                 </div>
                 <div class="modal-field">
-                    <input type="checkbox" name="privacy" required id="privacy" class="modal-check visually-hidden" />
-                        <label for="privacy" class="check-text">
-                            <span>
+                    <input type="checkbox" name="user-privacy" required id="user-privacy" value="true" class="modal-check visually-hidden" />
+                        <label for="user-privacy" class="check-text">
+                            <span class="modal-check-span">
                                 <svg class="modal-check-icon" width="10" height="8">
                                     <use href="./images/icons.svg#icon-Vector"></use>
                                 </svg>
@@ -451,8 +451,8 @@
                                 I accept the terms and conditions of the
                                     <a href="" class="check-link">Privacy Policy</a>
                         </label>
-                        <button type="submit" class="btn-send">Send</button>
                 </div>
+                <button type="submit" class="btn-send">Send</button>
             </form>
         </div>
     </div>
