--- a/index.html
+++ b/index.html
@@ -436,11 +436,11 @@
                             </svg>
                         </div>
                 </div>
-                <div class="modal-field">
+                <div class="modal-field comment-modal">
                     <label for="user-comment" class="modal-label">Comment</label>
                         <textarea name="user-comment" id="user-comment" placeholder="Text input" class="modal-text"></textarea>
                 </div>
-                <div class="modal-field">
+                <div class="modal-field checkbox-modal-field">
                     <input type="checkbox" name="user-privacy" required id="user-privacy" value="true" class="modal-check visually-hidden" />
                         <label for="user-privacy" class="check-text">
                             <span class="modal-check-span">
