--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
     <main>
         <section class="first-sect">
-            <div class="container hero-title">
-            <h1 class="title">Effective Solutions
+            <div class="container">
+            <h1 class="title hero-title">Effective Solutions
             for Your Business</h1>
         <button type="button" class="button-text">Order Service</button>
             </div>
@@ -109,12 +109,12 @@
 
         <section class="third-sect">
             <div class="container">
-            <h2 class="title">Our Team</h2>
+            <h2 class="title photo-subtitle">Our Team</h2>
             <ul class="photo photo-list">
-                <li class="third-list">
-                    <img src="./images/card1.jpg" alt="Product Designer" width="264" />
-                    <div class="title-container">
-                    <h3 class="photo-title">Mark Guerrero</h3>
+                <li class="photo-list-item">
+                    <img src="./images/card1.jpg" alt="Product Designer" width="264" class="team-image" />
+                    <div class="title-wrap-container">
+                    <h3 class="photo-subtitle">Mark Guerrero</h3>
                     <p class="photo-text">Product Designer</p>
                     <ul class="social-team-list">
                         <li class="social-team-list-item">
@@ -148,10 +148,10 @@
                     </ul>
                     </div>
                 </li>
-                <li class="third-list">
-                    <img src="./images/card2.jpg" alt="Frontend Developer" width="264" />
-                    <div class="title-container">
-                    <h3 class="photo-title">Tom Ford</h3>
+                <li class="photo-list-item">
+                    <img src="./images/card2.jpg" alt="Frontend Developer" width="264" class="team-image" />
+                    <div class="title-wrap-container">
+                    <h3 class="photo-subtitle">Tom Ford</h3>
                     <p class="photo-text">Frontend Developer</p>
                     <ul class="social-team-list">
                         <li class="social-team-list-item">
@@ -185,10 +185,10 @@
                     </ul>
                     </div>
                 </li>
-                <li class="third-list">
-                    <img src="./images/card3.jpg" alt="Marketing" width="264" />
-                    <div class="title-container">
-                    <h3 class="photo-title">Camila Garcia</h3>
+                <li class="photo-list-item">
+                    <img src="./images/card3.jpg" alt="Marketing" width="264" class="team-image" />
+                    <div class="title-wrap-container">
+                    <h3 class="photo-subtitle">Camila Garcia</h3>
                     <p class="photo-text">Marketing</p>
                     <ul class="social-team-list">
                         <li class="social-team-list-item">
@@ -222,10 +222,10 @@
                     </ul>
                     </div>
                 </li>
-                <li class="third-list">
-                    <img src="./images/card4.jpg" alt="UI Designer" width="264" />
-                    <div class="title-container">
-                    <h3 class="photo-title">Daniel Wilson</h3>
+                <li class="photo-list-item">
+                    <img src="./images/card4.jpg" alt="UI Designer" width="264" class="team-image" />
+                    <div class="title-wrap-container">
+                    <h3 class="photo-subtitle">Daniel Wilson</h3>
                     <p class="photo-text">UI Designer</p>
                     <ul class="social-team-list">
                         <li class="social-team-list-item">
@@ -265,9 +265,9 @@
 
         <section class="fourth-sect">
             <div class="container fourth-container">
-            <h2 class="title">Our Portfolio</h2>
-            <ul class="card">
-                <li class="card-list">
+            <h2 class="title card-subtitle">Our Portfolio</h2>
+            <ul class="card-list">
+                <li class="card-list-item">
                     <div class="card-img-wrap">
                     <img src="./images/img3.jpg" alt="App" width="360" />
                     <p class="card-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App ·
@@ -278,7 +278,7 @@
                     <p class="card-text">App</p>
                     </div>
                 </li>
-                <li class="card-list">
+                <li class="card-list-item">
                     <div class="card-img-wrap">
                     <img src="./images/img2.jpg" alt="Marketing" width="360" />
                     <p class="card-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
@@ -290,7 +290,7 @@
                     <p class="card-text">Marketing</p>
                     </div>
                 </li>
-                <li class="card-list">
+                <li class="card-list-item">
                     <div class="card-img-wrap">
                     <img src="./images/img1.jpg" alt="App" width="360" />
                     <p class="card-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
@@ -302,7 +302,7 @@
                     <p class="card-text">App</p>
                     </div>
                 </li>
-                <li class="card-list">
+                <li class="card-list-item">
                     <div class="card-img-wrap">
                     <img src="./images/img6.jpg" alt="Marketing" width="360" />
                     <p class="card-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
@@ -314,7 +314,7 @@
                     <p class="card-text">Marketing</p>
                     </div>
                 </li>
-                <li class="card-list">
+                <li class="card-list-item">
                     <div class="card-img-wrap">
                     <img src="./images/img4.jpg" alt="Design" width="360" />
                     <p class="card-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
@@ -326,7 +326,7 @@
                     <p class="card-text">Design</p>
                     </div>
                 </li>
-                <li class="card-list">
+                <li class="card-list-item">
                     <div class="card-img-wrap">
                     <img src="./images/img5.jpg" alt="Marketing" width="360" />
                     <p class="card-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App ·
@@ -400,7 +400,7 @@
         </div>
     </footer>
 
-    <div class="backdrop is-open">
+    <div class="backdrop">
         <div class="modal">
             <button class="btn-close" type="button">
                 <svg class="btn-close-icon" width="8" height="8">
